# AulaSeg2016HS

./: AulaSeg2016HS.cabal  LICENSE
app/: Main.hs
src/: Lib.hs
test/: Spec.hs
