name:                AulaSeg2016HS
version:             0.1.0.0
synopsis:            Initial project template from stack, using test-framework with QuickCheck
description:         Please see README.md
homepage:            https://github.com/wuerges/AulaSeg2016HS#readme
license:             BSD3
license-file:        LICENSE
author:              Emilio Wuerges
maintainer:          wuerges@gmail.com
copyright:           BSD
category:            random stuff
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , containers
  default-language:    Haskell2010

executable AulaSeg2016HS-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , conduit
                     , conduit-combinators
                     , conduit-extra
                     , resourcet
                     , AulaSeg2016HS
                     , bytestring
  default-language:    Haskell2010

test-suite AulaSeg2016HS-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , AulaSeg2016HS
                     , test-framework
                     , test-framework-quickcheck2
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/wuerges/AulaSeg2016HS
